test_regress/t/t_fuzz_always_bad.out
%Error: t/t_fuzz_always_bad.v:9: Can't find definition of 'a' in dotted variable: 'c.a'
   always @ c.a c:h;
              ^
%Error: t/t_fuzz_always_bad.v:9: Can't find definition of task/function: 'h'
   always @ c.a c:h;
                  ^
%Error: t/t_fuzz_always_bad.v:9: Unsupported: Complex statement in sensitivity list
   always @ c.a c:h;
             ^
%Error: Exiting due to
